# TopoTEM

./: .gitignore  README.md  dummy_data.py  polarisation.py  pyproject.toml
docs/source/: api_doc.rst  conf.py  index.rst
test_notebooks/: Untitled.ipynb  polarisation_vectors_tutorial.ipynb
tests/: test_plot.py
topotem/: __init__.py  fft_mapping.py  polarisation.py
topotem/tests/: test_plot.py
