[tool.poetry]
name = "topotem"
version = "0.1.2"
description = ""
authors = ["GeriTopore <geritopore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
hyperspy = "^2.1.1"
# atomap = "^0.3.0"


[[tool.poetry.source]]
name = "conda"
url = "https://anaconda.org/"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
