[tool.poetry]
name = "TopoTEM"
version = "0.1.2"
description = ""
authors = ["GeriTopore <g.topore22@imperial.ac.uk>"]
readme = "README.md"
packages = [{ include = "topotem" }]

[tool.poetry.dependencies]
python = "<3.13"
hyperspy = ">=2.0.0"
hyperspy-gui-ipywidgets = "^1.5.0"
hyperspy-gui-traitsui = ">=1.5.2"
atomap = "^0.4.0"
matplotlib-scalebar = "^0.8.1"
colorcet = "^3.0.1"
chardet = "^5.1.0"

[[tool.poetry.source]]
name = "conda"
url = "https://anaconda.org/"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
